# oxide-pass

./: .gitignore  Cargo.toml  FEATURES.md  mini-paas-build-steps.md
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/paas/: Cargo.toml  paas.toml
crates/paas/src/: cli.rs  main.rs
crates/paas/src/commands/: deploy.rs  init.rs  logs.rs  mod.rs  redeploy.rs  status.rs  stop.rs
crates/paasd/: .env  Cargo.toml
crates/paasd/src/: main.rs  models.rs
crates/paasd/src/handlers/: app_handlers.rs  log_handlers.rs  mod.rs
crates/paasd/src/repository/: app_repo.rs  log_repo.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
migrations/: 0002_apps_table.sql  0003_apps_table.sql  0004_add_working_dir.sql  0007_cleanup_stale_apps.sql  0009_add_crashed_status.sql
src/: main.rs
