[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_JobObjects",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
] }

[dependencies]
shared = { path = "../shared" }
actix-web = "4"
tokio = {version = "1.0", features = ["full"]}
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.101"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }
