[package]
name = "paas"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
tokio = {version = "1.0", features = ["full"]}
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.101"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }
