[package]
name = "paasd"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
actix-web = "4"
tokio = {version = "1.0", features = ["full"]}
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"